CSRF was missing
A bit more CSS styling

--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -61,6 +61,9 @@ canvas.overlink {
     visibility: hidden;
 }
 
+.subheading {
+	font-size: smaller;
+}
 /* Used to mark columns of tables as semantically containing numbers or text. */
 .numberColumn {
 	text-align: right;
